# precice-parallel-solverdummies

./: .gitignore  README.md  precice-config-parallel-julia.xml  precice-config-parallel.xml  solverdummy-python-parallel.py
c/: CMakeLists.txt  solverdummy-c-parallel.c
cpp/: CMakeLists.txt  solverdummy-cpp-parallel.cpp
fortran/: CMakeLists.txt  solverdummy-parallel-fortran.f90
python/: solverdummy-python-parallel.py
